# kotone-chan

./: .gitignore  Dockerfile  README.md  bot.py  for_developers.md  privacy_policy.md  pyproject.toml  requirements.txt  test_requirements.txt
kotone/: bot.py  event_interact.py  exclamation_misc.py  keep_alive.py  slash_anchor.py  slash_flashcard.py  slash_gkmas.py  slash_non_gkmas.py  slash_secret.py  slash_youtube_utils.py  util_binary_enum.py  util_chara_name.py  util_emoji.py  util_voiceline.py
kotone/cogs/: misc.py
kotone/events/: interact.py
kotone/exclamation/: misc.py
kotone/flashcard/: flashcard_p_drinks.yaml  flashcard_p_items.yaml  flashcard_p_items_freq.yaml  flashcard_skillcards.yaml  flashcard_skillcards_freq.yaml  init_flashcard.py
kotone/slash/: anchor.py  flashcard.py  gkmas.py  non_gkmas.py  secret.py  youtube_utils.py
kotone/util/: binary_enum.py  chara_name.py  emoji.py  voiceline.py
kotone/utils/: binary_enum.py  chara_name.py  emoji.py  voice.py  voiceline.py
slash/: gkmas.py
tests/: conftest.py  test_exclamation_misc.py  test_slash_flashcard.py  test_util_chara_name.py  test_util_emoji.py  test_util_voiceline.py
utils/: emoji.py
