[project]
name = "kotone"
version = "1.0.16"
description = "A custom Discord app for Gakumas."
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "python-dotenv",
    "discord.py",
    "pyyaml",
    "flask",
    "google-api-python-client",
    "audioop-lts; python_version>='3.13'",
]

[project.urls]
Homepage = "https://github.com/ttineres/kotone-chan"

[project.scripts]
kotone-init = "kotone.bot:main"

[tool.setuptools.package-data]
"kotone" = [
    "flashcard/flashcard_p_drinks.yaml",
    "flashcard/flashcard_p_items.yaml",
    "flashcard/flashcard_p_items_freq.yaml",
    "flashcard/flashcard_skillcards.yaml",
    "flashcard/flashcard_skillcards_freq.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["kotone"]
